[gd_scene load_steps=2 format=3 uid="uid://bw4bipweikmx2"]

[ext_resource type="Script" uid="uid://c3tgaa5neknkq" path="res://main.gd" id="1_ig7tw"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="BG" type="ColorRect" parent="."]
offset_right = 1366.0
offset_bottom = 768.0
color = Color(0.117647, 0.117647, 0.117647, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 1366.0
offset_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Container_Left" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Container_Left"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Container_Left/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI_UsernameDisplay" type="LineEdit" parent="HBoxContainer/Container_Left/ColorRect/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"
alignment = 1
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false

[node name="UI_Address" type="LineEdit" parent="HBoxContainer/Container_Left"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "127.0.0.1"

[node name="UI_Username" type="LineEdit" parent="HBoxContainer/Container_Left"]
layout_mode = 2
placeholder_text = "Username"

[node name="UI_Host" type="Button" parent="HBoxContainer/Container_Left"]
layout_mode = 2
text = "Host"

[node name="UI_Join" type="Button" parent="HBoxContainer/Container_Left"]
layout_mode = 2
text = "Join"

[node name="Container_Middle" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(800, 512)
layout_mode = 2
size_flags_horizontal = 3

[node name="UI_Chat" type="TextEdit" parent="HBoxContainer/Container_Middle"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Hello World!"
editable = false
context_menu_enabled = false
selecting_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[node name="Message_Container" type="HBoxContainer" parent="HBoxContainer/Container_Middle"]
layout_mode = 2

[node name="UI_Send" type="Button" parent="HBoxContainer/Container_Middle/Message_Container"]
layout_mode = 2
text = "Send"

[node name="UI_Message" type="LineEdit" parent="HBoxContainer/Container_Middle/Message_Container"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Message"
max_length = 2000
keep_editing_on_text_submit = true
middle_mouse_paste_enabled = false

[node name="Container_Right" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/Container_Left/UI_Host" to="." method="_on_ui_host_pressed"]
[connection signal="pressed" from="HBoxContainer/Container_Left/UI_Join" to="." method="_on_ui_join_pressed"]
[connection signal="pressed" from="HBoxContainer/Container_Middle/Message_Container/UI_Send" to="." method="_on_ui_send_pressed"]
[connection signal="text_submitted" from="HBoxContainer/Container_Middle/Message_Container/UI_Message" to="." method="_on_ui_message_text_submitted"]
